# EveNet-Lite

./: .gitmodules  MANIFEST.in  README.md  RELEASING.md  evenet_lite_model.py  main.py  pyproject.toml
.github/workflows/: build-packages.yml
NERSC/: export_DDP_vars.sh  generate_nersc_slurm.py  run_on_16_gpus.sh  submit_evenet_lite.slurm  train_multi_gpu.py
evenet_lite/: __init__.py  callbacks.py  checkpoint.py  classifier.py  data.py  hf_utils.py  metrics.py  model.py  optim.py  runner.py  trainer.py  transform_binning.py
evenet_lite/callbacks/: __init__.py  debug.py
evenet_lite/config/: default_network_config.yaml
examples/: parameterized_train_multi_gpu_example.py
grid_study/: Make_Script.py  Make_Script_delphes.py  accumulators.py  monitor.ipynb  process_data.py  resolve_samples.py  shared_metrics.py  train_pc_mva.py  train_tabular_mva.py
grid_study/config/: feature.yaml  sample.yaml  sample_delphes.yaml  sample_list.json
grid_study/norm/: normalization_pretrain.pt
grid_study/preprocess/: skim.py
tests/ddp/: common.py  grad_sync_test.py  metric_reduction_test.py  sampler_coverage_test.py  test_main.py  weighted_sampler_test.py
