[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evenet-lite"
version = "0.3.0"
description = "Lightweight training and inference package built on top of evenet-core."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "EveNet contributors" }]
dependencies = [
  "evenet-core>=0.3.0",
  "huggingface-hub>=0.24",
  "matplotlib>=3.7",
  "numpy==1.26.4",
  "pyyaml>=6.0",
  "scipy>=1.10",
  "torch>=2.1",
  "wandb>=0.16",
]
keywords = ["machine-learning", "physics", "pytorch", "evenet"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = ["build>=1.2.2", "pytest>=8.0", "twine>=5.1"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["evenet_lite*"]

[tool.setuptools.package-data]
evenet_lite = ["config/*.yaml"]
